--- a/MyApttSocietyAPI/Web.config
+++ b/MyApttSocietyAPI/Web.config
@@ -65,6 +65,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="SocietyDBEntities" connectionString="metadata=res://*/SocietyDB.csdl|res://*/SocietyDB.ssdl|res://*/SocietyDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=148.72.232.168;user id=Society;password=Society@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SocietyDBEntities" connectionString="metadata=res://*/SocietyDB.csdl|res://*/SocietyDB.ssdl|res://*/SocietyDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=148.72.232.166;user id=Nestin;password=Anvisys@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
