--- a/MyApttSocietyAPI/MyApttSocietyAPI.csproj
+++ b/MyApttSocietyAPI/MyApttSocietyAPI.csproj
@@ -132,9 +132,6 @@
     <Compile Include="Advertisement.cs">
       <DependentUpon>SocietyDB.tt</DependentUpon>
     </Compile>
-    <Compile Include="BillCycle.cs">
-      <DependentUpon>SocietyDB.tt</DependentUpon>
-    </Compile>
     <Compile Include="Complaint.cs">
       <DependentUpon>SocietyDB.tt</DependentUpon>
     </Compile>
@@ -211,6 +208,7 @@
     <Compile Include="Models\Batch.cs" />
     <Compile Include="Models\Billing.cs" />
     <Compile Include="Models\Complaint.cs" />
+    <Compile Include="Models\CustomMessage.cs" />
     <Compile Include="Models\DateTimeInput.cs" />
     <Compile Include="Models\DifferentialInput.cs" />
     <Compile Include="Models\Domain.cs" />
@@ -222,6 +220,7 @@
     <Compile Include="Models\Utility.cs" />
     <Compile Include="Models\ValidateUser.cs" />
     <Compile Include="Models\ValidUser.cs" />
+    <Compile Include="Models\Visitor.cs" />
     <Compile Include="Models\VisitorEntry.cs" />
     <Compile Include="Models\Notice.cs" />
     <Compile Include="Models\Poll.cs" />
@@ -327,10 +326,13 @@
     <Compile Include="ViewInventoryAccomodation.cs">
       <DependentUpon>SocietyDB.tt</DependentUpon>
     </Compile>
-    <Compile Include="ViewLatestGeneratedBill.cs">
+    <Compile Include="ViewLatestBill.cs">
       <DependentUpon>SocietyDB.tt</DependentUpon>
     </Compile>
-    <Compile Include="ViewLatestGeneratedBill_Resident.cs">
+    <Compile Include="viewLatestFlatBill.cs">
+      <DependentUpon>SocietyDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ViewLatestOffer.cs">
       <DependentUpon>SocietyDB.tt</DependentUpon>
     </Compile>
     <Compile Include="ViewLatestThread.cs">
@@ -370,6 +372,9 @@
       <DependentUpon>SocietyDB.tt</DependentUpon>
     </Compile>
     <Compile Include="ViewVehiclePoolEngagement.cs">
+      <DependentUpon>SocietyDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ViewVendor.cs">
       <DependentUpon>SocietyDB.tt</DependentUpon>
     </Compile>
     <Compile Include="viewVisitorData.cs">
