--- a/MyApttSocietyAPI/Web.config
+++ b/MyApttSocietyAPI/Web.config
@@ -65,6 +65,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="SocietyDBEntities" connectionString="metadata=res://*/SocietyDB.csdl|res://*/SocietyDB.ssdl|res://*/SocietyDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=148.72.232.166;user id=Nestin;password=Anvisys@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  <add name="SocietyDBEntities" connectionString="metadata=res://*/SocietyDB.csdl|res://*/SocietyDB.ssdl|res://*/SocietyDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.21.58.193;initial catalog=Nestin;user id=Nestin;password=Anvisys@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /> 
+     <!-- <add name="SocietyDBEntities" connectionString="metadata=res://*/SocietyDB.csdl|res://*/SocietyDB.ssdl|res://*/SocietyDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=148.72.232.166;initial catalog=NestinDB;user id=Nestin;password=Anvisys@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /> -->
   </connectionStrings>
 </configuration>
