--- a/MyApttSocietyAPI/Web.Deploy.config
+++ b/MyApttSocietyAPI/Web.Deploy.config
@@ -29,8 +29,8 @@
     -->
   </system.web>
   <connectionStrings>
-    <!--<add name="SocietyDBEntities" 
-         connectionString="metadata=res://*/SocietyDB.csdl|res://*/SocietyDB.ssdl|res://*/SocietyDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=148.72.232.166;initial catalog=NestinDB;integrated security=no;User ID=Nestin; Password=Anvisys@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" /> -->
-    <add name="SocietyDBEntities" connectionString="metadata=res://*/SocietyDB.csdl|res://*/SocietyDB.ssdl|res://*/SocietyDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.21.58.193;initial catalog=Nestin;integrated security=no;User ID=Nestin; Password=Anvisys@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+   <add name="NestinDBEntities" 
+         connectionString="metadata=res://*/SocietyDB.csdl|res://*/SocietyDB.ssdl|res://*/SocietyDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=148.72.232.166;initial catalog=NestinDB;integrated security=no;User ID=Nestin; Password=Anvisys@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    <!-- <add name="NestinDBEntities" connectionString="metadata=res://*/SocietyDB.csdl|res://*/SocietyDB.ssdl|res://*/SocietyDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.21.58.193;initial catalog=Nestin;integrated security=no;User ID=Nestin; Password=Anvisys@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />-->
   </connectionStrings>
 </configuration>
