--- a/MyApttSocietyAPI/Web.Release.config
+++ b/MyApttSocietyAPI/Web.Release.config
@@ -29,6 +29,7 @@
     -->
   </system.web>
   <connectionStrings>
-    <add name="SocietyDBEntities" connectionString="metadata=res://*/SocietyDB.csdl|res://*/SocietyDB.ssdl|res://*/SocietyDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:myaptt.database.windows.net,1433;initial catalog=GaurGrandeur;integrated security=no;User ID=myaptt@myaptt; Password=Password@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
-     </connectionStrings>
+    <add name="NestinDBEntities"
+          connectionString="metadata=res://*/SocietyDB.csdl|res://*/SocietyDB.ssdl|res://*/SocietyDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=148.72.232.166;initial catalog=NestinDB;integrated security=no;User ID=Nestin; Password=Anvisys@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+  </connectionStrings>
 </configuration>
